# final-project-miguel-montes-lorenzo

./: .gitignore  ARCHITECTURE.md  README.md  pyproject.toml  requirements.txt
configs/: backtest.yaml  download.yaml  eval.yaml  train.yaml  transform.yaml
configs/models/pointwise/: HTGNN.yaml  NN.yaml
configs/models/probabilistic/: BHTGNN.yaml  BNN.yaml
configs/strategies/pointwise/: full_rebalancing.yaml  partial_rebalancing.yaml
configs/strategies/probabilistic/: black_litterman.yaml
prompts/: 00-custom-instructions.txt  01-download-data.txt  02-read-data.txt  03-join-data.txt  04-load-data.txt
report/: README.md  main.typ  references.bib  template.typ
report/content/: 00-index.typ  01-introduction.typ  02-data-structuring.typ  03-signal-structuring.typ  04-allocation-strategies.typ  05-baselines.typ  06-htgnn-model.typ  07-results.typ  08-conclusions.typ  09-future-work.typ
report/figures/results/: metrics_summary.json
report/slides/: README.md  main.typ
src/: __init__.py  backtest.py  eval.py  train.py
src/analysis/: BHTGNN_focus.py  HTGNN_focus.py  __init__.py  common.py  data.py
src/data/: __init__.py  dataset.ipynb  dataset.py  date_utils.py  download.py  integrate.py  join.py  load.py  load_utils.py  read.py  summary.py  symbols.py  transform.py  utils.py
src/metrics/: __init__.py  runner.py
src/metrics/performance/: __init__.py  drawdown.py  returns.py  sharpe.py  sortino.py
src/metrics/stability/: __init__.py  herfindahl.py  turnover.py
src/models/: __init__.py  abstract.py  base.py  bayesian.py  dirichlet_losses.py  mlp.py  registry.py  utils.py
src/models/metrics/: metrics.py  pipelines.py
src/models/models/TCN/: config.py  interface.py  model.py  train.py  utils.py
src/models/pointwise/: __init__.py
src/models/pointwise/HTGNN/: __init__.py  model.py
src/models/pointwise/NN/: __init__.py  model.py
src/models/probabilistic/: __init__.py
src/models/probabilistic/BHTGNN/: __init__.py  model.py
src/models/probabilistic/BNN/: __init__.py  model.py
src/models/training/: TCN.ipynb
src/strategies/: __init__.py  base.py  registry.py
src/strategies/pointwise/: __init__.py  full_rebalancing.py  partial_rebalancing.py
src/strategies/probabilistic/: __init__.py  black_litterman.py
src/utils/: __init__.py  config.py  io.py  random.py
src/xai/common/: __init__.py  data_adapter.py  graph_plotting.py  grouping.py  io.py  model_adapter.py  performance.py  perturbations.py  plotting.py  recycled_htgnn_plots.py  targets.py
src/xai/evaluation/: __init__.py  deletion_insertion.py
src/xai/global_explanations/: __init__.py  grouped_shap.py
src/xai/local_explanations/: __init__.py  integrated_gradients.py  subgraph_occlusion.py  temporal_occlusion.py
xai/: __init__.py  xai.ipynb  xai.py  xai_metrics.json  xai_outputs_manifest.json  xai_run_config.json
