[project]
name = "htgnn-forex-trading"
version = "0.1.0"
description = "Application of heterogeneous temporal graph neural networks to FOREX portfolio allocation."
requires-python = ">=3.12"
dependencies = [
    "absl-py",
    "asttokens",
    "beautifulsoup4",
    "certifi",
    "cffi",
    "charset-normalizer",
    "comm",
    "contourpy",
    "curl-cffi",
    "cycler",
    "debugpy",
    "decorator",
    "executing",
    "filelock",
    "fonttools",
    "frozendict",
    "fsspec",
    "grpcio",
    "idna",
    "ipykernel",
    "ipython",
    "ipython-pygments-lexers",
    "jedi",
    "jinja2",
    "joblib",
    "jupyter-client",
    "jupyter-core",
    "kiwisolver",
    "markdown",
    "markdown-it-py",
    "markupsafe",
    "matplotlib",
    "matplotlib-inline",
    "mdurl",
    "mpmath",
    "multitasking",
    "nest-asyncio",
    "networkx",
    "numpy",
    "packaging",
    "pandas",
    "parso",
    "peewee",
    "pexpect",
    "pillow",
    "platformdirs",
    "prompt-toolkit",
    "protobuf",
    "psutil",
    "ptyprocess",
    "pure-eval",
    "pyarrow",
    "pycparser",
    "pygments",
    "pyparsing",
    "python-dateutil",
    "pytz",
    "pyyaml",
    "pyzmq",
    "requests",
    "rich",
    "scikit-learn",
    "scipy",
    "setuptools",
    "six",
    "soupsieve",
    "stack-data",
    "sympy",
    "tensorboard",
    "tensorboard-data-server",
    "threadpoolctl",
    "torch",
    "tornado",
    "tqdm",
    "traitlets",
    "triton",
    "typing-extensions",
    "urllib3",
    "wcwidth",
    "websockets",
    "werkzeug",
    "yfinance",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.6",
]
cuda = [
    "cuda-bindings",
    "cuda-pathfinder",
    "nvidia-cublas-cu12",
    "nvidia-cuda-cupti-cu12",
    "nvidia-cuda-nvrtc-cu12",
    "nvidia-cuda-runtime-cu12",
    "nvidia-cudnn-cu12",
    "nvidia-cufft-cu12",
    "nvidia-cufile-cu12",
    "nvidia-curand-cu12",
    "nvidia-cusolver-cu12",
    "nvidia-cusparse-cu12",
    "nvidia-cusparselt-cu12",
    "nvidia-nccl-cu12",
    "nvidia-nvjitlink-cu12",
    "nvidia-nvshmem-cu12",
    "nvidia-nvtx-cu12",
]

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = []
